# OpenGL_QT_Testing

./: CMakeLists.txt  main.cpp  myglwidget.cpp  myglwidget.h  ui_window.h  window.h  window.ui
